# azure-uamqp-c

samples/: CMakeLists.txt
tests/: CMakeLists.txt
